--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -10,6 +10,9 @@ body {
 
 .header {
   background: white;
+  display:flex;
+  justify-content: space-between;
+  padding:8px;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
@@ -44,5 +47,15 @@ a {
 }
 
 ul {
+  display:flex;
+  gap:16px;
+  margin:0;
+  padding:0;
   list-style-type: none;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap:16px;
 }
